--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.3",
+    "@google/generative-ai": "^0.24.0",
+    "@langchain/community": "^0.3.34",
+    "@langchain/core": "^0.3.42",
+    "@langchain/google-genai": "^0.1.10",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.3.2",
